<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        app:srcCompat="@drawable/ic_person"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_usuario"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/txtContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType = "textPassword"
        android:hint="@string/lbl_contra"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>


    <Button
        android:id="@+id/btnAplicar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="30dp"
        android:text="@string/btn_autenticar" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/btnRegistrar" />

</LinearLayout>


